# Tucil3_13524003_13524024

./: CMakeLists.txt  README.md  dockerfile  run.sh
configs/: config1.txt  placeholder.txt  tc1.txt  tc2.txt  tc3.txt  tc4.txt  tc5.txt
include/core/: Board.hpp  BoardAlg.hpp
include/gui/render/: BoardView.hpp  ControlPanel.hpp
src/core/: Board.cpp  BoardAlg.cpp
src/gui/: main.cpp
src/gui/renderer/: BoardView.cpp  ControlPanel.cpp
src/imgui/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
test/: config1_BGFS_h=1.txt  tc1_ASTAR_h=1.txt  tc1_ASTAR_h=2.txt  tc1_ASTAR_h=3.txt  tc1_BFS.txt  tc1_BGFS_h=2.txt  tc1_BeamSearch_h=2_k=45.txt  tc1_BeamSearch_h=3_k=50.txt  tc1_GBFS_h=3.txt  tc1_UCS.txt  tc2_ASTAR_h=1.txt  tc2_BFS.txt  tc2_BGFS_h=1.txt  tc2_BeamSearch_h=1_k=50.txt  tc2_GBFS_h=1.txt  tc2_UCS.txt  tc3_ASTAR_h=1.txt  tc3_ASTAR_h=2.txt  tc3_BFS.txt  tc3_BeamSearch_h=2_k=50.txt  tc3_GBFS_h=2.txt  tc3_UCS.txt  tc4_ASTAR_h=1.txt  tc4_BFS.txt  tc4_BGFS_h=1.txt  tc4_BeamSearch_h=1_k=45.txt  tc4_BeamSearch_h=1_k=50.txt  tc4_GBFS_h=1.txt  tc4_UCS.txt  tc5_ASTAR_h=1.txt  tc5_BFS.txt  tc5_BGFS_h=2.txt  tc5_BeamSearch_h=2_k=50.txt  tc5_UCS.txt
